# pandoc-light

./: .gitignore  0001-pandoc-light-add.patch  Setup.hs  default.nix  pandoc-editor.hs  pandoc-light.cabal  pandoc.hs  shell.nix  stack.yaml
src/Text/: Pandoc.hs
src/Text/Pandoc/: Data.hs  MIME.hs  Options.hs  PDF.hs  Parsing.hs  Pretty.hs  Shared.hs
src/Text/Pandoc/Readers/: HTML.hs  LaTeX.hs  Markdown.hs
src/Text/Pandoc/Writers/: HTML.hs  LaTeX.hs  Markdown.hs
