Name:            pandoc-light
Version:         1.17.2
Cabal-Version:   >= 1.10
Build-Type:      Custom
License:         GPL
License-File:    COPYING
Copyright:       (c) 2006-2016 John MacFarlane
Author:          John MacFarlane <jgm@berkeley.edu>
Maintainer:      John MacFarlane <jgm@berkeley.edu>
Bug-Reports:     https://github.com/jgm/pandoc/issues
Stability:       alpha
Homepage:        http://pandoc.org
Category:        Text
Tested-With:     GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
Synopsis:        Conversion between markup formats
Description:     Pandoc is a Haskell library for converting from one markup
                 format to another, and a command-line tool that uses
                 this library. It can read several dialects of Markdown and
                 (subsets of) HTML, reStructuredText, LaTeX, DocBook,
                 MediaWiki markup, TWiki markup, Haddock markup, OPML,
                 Emacs Org-Mode, txt2tags, Word Docx, ODT, and Textile, and
                 it can write Markdown, reStructuredText, XHTML, HTML 5,
                 LaTeX, ConTeXt, DocBook, OPML, TEI, OpenDocument, ODT,
                 Word docx, RTF, MediaWiki, DokuWiki, ZimWiki, Textile,
                 groff man pages, plain text, Emacs Org-Mode, AsciiDoc,
                 Haddock markup, EPUB (v2 and v3), FictionBook2, InDesign ICML,
                 and several kinds of HTML/javascript slide shows (S5, Slidy,
                 Slideous, DZSlides, reveal.js).
                 .
                 In contrast to most existing tools for converting Markdown
                 to HTML, pandoc has a modular design: it consists of a set of
                 readers, which parse text in a given format and produce a
                 native representation of the document, and a set of writers,
                 which convert this native representation into a target
                 format. Thus, adding an input or output format requires
                 only adding a reader or writer.

Extra-Source-Files:
                 -- documentation
                 INSTALL, BUGS, README.md, CONTRIBUTING.md, changelog
Source-repository head
  type:          git
  location:      git://github.com/jgm/pandoc.git

Executable pandoc-editor
  Main-Is:       pandoc-editor.hs
  default-language: Haskell2010
  Build-Depends: base >= 4.2 && <5,
                 pandoc-light == 1.17.2,
                 ghcjs-prim >= 0.1.0.0,
                 ghcjs-base >= 0.2.0.0,
                 blaze-html >= 0.8.1.2,
                 ghcjs-dom >= 0.2.3.1,
                 text >= 1.2.2.1,
                 transformers,
                 Cabal >= 1.10
Library
  Build-Depends: base >= 4.2 && <5,
                 syb >= 0.1 && < 0.7,
                 containers >= 0.1 && < 0.6,
                 unordered-containers >= 0.2 && < 0.3,
                 array >= 0.3 && < 0.6,
                 parsec >= 3.1 && < 3.2,
                 mtl >= 1.1 && < 2.3,
                 filepath >= 1.1 && < 1.5,
                 process >= 1 && < 1.5,
                 directory >= 1 && < 1.3,
                 bytestring >= 0.9 && < 0.11,
                 text >= 0.11 && < 1.3,
                 zip-archive >= 0.2.3.4 && < 0.4,
                 HTTP >= 4000.0.5 && < 4000.4,
                 xml >= 1.3.12 && < 1.4,
                 random >= 1 && < 1.2,
                 extensible-exceptions >= 0.1 && < 0.2,
                 pandoc-types >= 1.16 && < 1.17,
                 aeson >= 0.7 && < 1.1,
                 tagsoup >= 0.13.7 && < 0.15,
                 base64-bytestring >= 0.1 && < 1.1,
                 zlib >= 0.5 && < 0.7,
                 data-default >= 0.4 && < 0.8,
                 temporary >= 1.1 && < 1.3,
                 blaze-html >= 0.5 && < 0.9,
                 blaze-markup >= 0.5.1 && < 0.8,
                 yaml >= 0.8.8.2 && < 0.9,
                 vector >= 0.10 && < 0.12,
                 hslua >= 0.3 && < 0.5,
                 binary >= 0.5 && < 0.9,
                 SHA >= 1.6 && < 1.7,
                 old-time,
                 deepseq >= 1.3 && < 1.5,
                 filemanip >= 0.3 && < 0.4,
                 cmark >= 0.5 && < 0.6,
                 ghc-prim >= 0.2,
                 time >= 1.5 && < 1.7,
                 network-uri >= 2.6 && < 2.7,
                 network >= 2.6
  cpp-options:   -DEMBED_DATA_FILES
  Ghc-Options:   -Wall -fno-warn-unused-do-bind
  Ghc-Prof-Options: -fprof-auto-exported
  Default-Language: Haskell98
  Other-Extensions:   PatternGuards, OverloadedStrings,
                      ScopedTypeVariables, GeneralizedNewtypeDeriving,
                      RelaxedPolyRec, DeriveDataTypeable, TypeSynonymInstances,
                      FlexibleInstances
  Hs-Source-Dirs:  src
  Exposed-Modules: Text.Pandoc,
                   Text.Pandoc.Options,
                   Text.Pandoc.Pretty,
                   Text.Pandoc.Shared,
                   Text.Pandoc.MediaBag,
                   Text.Pandoc.Error,
                   Text.Pandoc.Readers.HTML,
                   Text.Pandoc.Readers.LaTeX,
                   Text.Pandoc.Readers.Markdown
                   Text.Pandoc.Writers.Markdown,
                   Text.Pandoc.Writers.HTML,
                   Text.Pandoc.Writers.LaTeX
                   Text.Pandoc.PDF,
                   Text.Pandoc.UTF8,
                   Text.Pandoc.Templates,
                   Text.Pandoc.XML,
                   Text.Pandoc.SelfContained,
                   Text.Pandoc.Process,
                   Text.Pandoc.CSS
  Other-Modules:
                   Text.Pandoc.Data,
                   Text.Pandoc.Writers.Shared,
                   Text.Pandoc.Asciify,
                   Text.Pandoc.MIME,
                   Text.Pandoc.Parsing,
                   Text.Pandoc.ImageSize,
                   Text.Pandoc.Compat.Time,
                   Text.Pandoc.Compat.Except,
                   Text.Pandoc.Compat.TagSoupEntity,
                   Text.Pandoc.Compat.Directory,
                   Text.Pandoc.Compat.Monoid,
                   Paths_pandoc_light

  Buildable:       True
